--- a/ci-app/package.json
+++ b/ci-app/package.json
@@ -12,7 +12,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "",
-      "pre-push": "ng lint",
+      "pre-push": "ng lint"
     }
   },
   "private": true,
