--- a/ci-app/package.json
+++ b/ci-app/package.json
@@ -35,12 +35,13 @@
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "bootstrap": "^4.1.3",
     "codelyzer": "~4.5.0",
-    "font-awesome": "^4.7.0",
+    "font-awesome": "4.7.0",
     "husky": "^1.1.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
