--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "2.24.0",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
