--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "2.24.0",
+    "ngx-autosize": "1.6.4",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
